package com.aaron.justlike.common.http.unsplash.entity.photo;

public class SearchPhoto {
}
